@@ -1,73 +1,0 @@
-// -*- C++ -*-
-// $Id$
-
-/**
- * Code generated by the The ACE ORB (TAO) IDL Compiler v2.0.1
- * TAO and the TAO IDL Compiler have been developed by:
- *       Center for Distributed Object Computing
- *       Washington University
- *       St. Louis, MO
- *       USA
- *       http://www.cs.wustl.edu/~schmidt/doc-center.html
- * and
- *       Distributed Object Computing Laboratory
- *       University of California at Irvine
- *       Irvine, CA
- *       USA
- * and
- *       Institute for Software Integrated Systems
- *       Vanderbilt University
- *       Nashville, TN
- *       USA
- *       http://www.isis.vanderbilt.edu/
- *
- * Information about TAO is available at:
- *     http://www.cs.wustl.edu/~schmidt/TAO.html
- **/
-
-
-// TAO_IDL - Generated from 
-// be/be_codegen.cpp:659
-
-#ifndef _TAO_IDL_LOG_RECORDS_FHFBZC_CPP_
-#define _TAO_IDL_LOG_RECORDS_FHFBZC_CPP_
-
-
-#include "Log_RecordS.h"
-
-#if !defined (__ACE_INLINE__)
-#include "Log_RecordS.inl"
-#endif /* !defined INLINE */
-
-// TAO_IDL - Generated from
-// be/be_visitor_arg_traits.cpp:68
-
-TAO_BEGIN_VERSIONED_NAMESPACE_DECL
-
-
-// Arg traits specializations.
-namespace TAO
-{
-}
-
-TAO_END_VERSIONED_NAMESPACE_DECL
-
-
-
-// TAO_IDL - Generated from
-// be/be_visitor_arg_traits.cpp:68
-
-TAO_BEGIN_VERSIONED_NAMESPACE_DECL
-
-
-// Arg traits specializations.
-namespace TAO
-{
-}
-
-TAO_END_VERSIONED_NAMESPACE_DECL
-
-
-
-#endif /* ifndef */
-
